--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3000
 CLIENT_ID=747157043466600477
-CLIENT_SECRET=8w6LQBDPD-Ypvrvr1meymB7gobg9OsDP
+CLIENT_SECRET=PzaSxaEgnGKKPu6IhPW5f6yrLz_UvRVn
 BASE_URL=http://localhost:3000
 MONGO_URI=mongodb+srv://api:spXLd9PS5ny7ugT@cluster001.7cmi1.mongodb.net
 TOKEN_SECRET=QxPWTUTCG7yxB78gX1AIOJ4FfvYexqxo
+BOT_TOKEN=NzQ3MTU3MDQzNDY2NjAwNDc3.X0KyOA.el-zqjDTb_872TlR03raUUn4JU0
