--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        registry: ${{ secrets.DOCKER_ULR }}
+        registry: ${{ secrets.DOCKER_URL }}
         username: Bendimester23
         password: semmi
 
